Add contract stubs, add bootstrap

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "truffle-init-webpack",
   "version": "0.0.2",
-  "description": "Frontend example using truffle v3",
+  "description": "Ethereum DApp Demo",
   "scripts": {
     "lint": "eslint --fix ./",
     "build": "webpack",
@@ -33,5 +33,9 @@
     "web3": "^0.20.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
+  },
+  "dependencies": {
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.2.1"
   }
 }
