--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "webpack-dev-server": "^2.3.0"
   },
   "dependencies": {
-    "bootstrap": "^3.3.7",
+    "bootstrap": "4.0.0-beta.2",
     "jquery": "^3.2.1"
   }
 }
